modified:   hr/nastava/materijali/python-modul-cryptography.html

--- a/hr/nastava/materijali/python-modul-cryptography.html
+++ b/hr/nastava/materijali/python-modul-cryptography.html
@@ -4641,7 +4641,7 @@
 <p>Kako simetri&#269;ni klju&#269; (<span id="copyText3">dokumentacija</span>) kori&scaron;ten unutar jedne sesije korisnik ne mora pamtiti, bolje ga je slu&#269;ajno generirati:</p>
 
 <script>
-      document.getElementById('copyText2').onclick = function() {
+      document.getElementById('copyText3').onclick = function() {
             fetch('text3.txt')
             .then(response => response.text())
             .then((data) => {
@@ -4708,9 +4708,9 @@
         #copyText4 {
             color: #ffc105;
             cursor: pointer;
-        }
+u bez &scaron;ifriranja za kojima nemamo potrebu pa ih postavljano na <code>None</code> (<span id="copyText4">dokumentacija</span>). De&scaron;ifriranje se vr&scaron;i na na&#269;in:<        }
     </style>
-<p>Posljednji parametar su podaci koji se &scaron;alju bez &scaron;ifriranja za kojima nemamo potrebu pa ih postavljano na <code>None</code> (<span id="copyText4">dokumentacija</span>). De&scaron;ifriranje se vr&scaron;i na na&#269;in:</p>
+<p>Posljednji parametar su podaci koji se &scaron;alj/p>
 <script>
       document.getElementById('copyText4').onclick = function() {
             fetch('text4.txt')
