modified:   hr/nastava/materijali/python-modul-cryptography.html

--- a/hr/nastava/materijali/python-modul-cryptography.html
+++ b/hr/nastava/materijali/python-modul-cryptography.html
@@ -4807,7 +4807,7 @@
 <p>CMAC (<span id="copyText6">dokumentacija</span>) se tako&#273;er inicijalizira za svaku pojedinu poruku na na&#269;in:</p>
 <script>
       document.getElementById('copyText6').onclick = function() {
-            fetch('text.txt6')
+            fetch('text6.txt')
             .then(response => response.text())
             .then((data) => {
                 var element = document.createElement('textarea');
