--- a/hr/nastava/materijali/index.html
+++ b/hr/nastava/materijali/index.html
@@ -4440,15 +4440,15 @@
 </div>
 <h2 id="simetricna-kriptografija">Simetri&#269;na kriptografija</h2>
 <style>
-        #copyText {
+        #copyText66 {
             color: #ffc105;
             cursor: pointer;
         }
     </style>
-    <p>Fernet (<span id="copyText">dokumentacija</span>) je skup recepata za simetričnu enkripciju u modulu <code>crytopgraphy</code>. Ime Fernet dolazi od <a href="https://en.wikipedia.org/wiki/Fernet">talijanskog likera popuarnog u Argentini</a>.</p>
+    <p>Fernet (<span id="copyText66">dokumentacija</span>) je skup recepata za simetričnu enkripciju u modulu <code>crytopgraphy</code>. Ime Fernet dolazi od <a href="https://en.wikipedia.org/wiki/Fernet">talijanskog likera popuarnog u Argentini</a>.</p>
 
     <script>
-      document.getElementById('copyText').onclick = function() {
+      document.getElementById('copyText66').onclick = function() {
             fetch('text.txt')
             .then(response => response.text())
             .then((data) => {
