--- a/hr/nastava/materijali/index.html
+++ b/hr/nastava/materijali/index.html
@@ -4645,7 +4645,7 @@
     </style>
 
 
-<p>Jedna od tipi&#269;nih primjena asimetri&#269;nog &scaron;ifriranja je razmjena klju&#269;eva za simetri&#269;no &scaron;ifriranje (<span id="808"></span>). Klju&#269; za simetri&#269;no &scaron;ifriranje se bira na jednoj strani:</p>
+<p>Jedna od tipi&#269;nih primjena asimetri&#269;nog &scaron;ifriranja je razmjena klju&#269;eva za simetri&#269;no &scaron;ifriranje (<span id="808">(Dokumentacija)</span>). Klju&#269; za simetri&#269;no &scaron;ifriranje se bira na jednoj strani:</p>
 
 
 
