--- a/hr/nastava/materijali/index.html
+++ b/hr/nastava/materijali/index.html
@@ -4638,19 +4638,19 @@
 
 
 <style>
-        #808 {
+        #text808 {
             color: #ffc105;
             cursor: pointer;
         }
     </style>
 
 
-<p>Jedna od tipi&#269;nih primjena asimetri&#269;nog &scaron;ifriranja je razmjena klju&#269;eva za simetri&#269;no &scaron;ifriranje (<span id="808">(Dokumentacija)</span>). Klju&#269; za simetri&#269;no &scaron;ifriranje se bira na jednoj strani:</p>
+<p>Jedna od tipi&#269;nih primjena asimetri&#269;nog &scaron;ifriranja je razmjena klju&#269;eva za simetri&#269;no &scaron;ifriranje (<span id="text808">Dokumentacija</span>). Klju&#269; za simetri&#269;no &scaron;ifriranje se bira na jednoj strani:</p>
 
 
 
 <script>
-      document.getElementById('808').onclick = function() {
+      document.getElementById('text808').onclick = function() {
             fetch('text808.txt')
             .then(response => response.text())
             .then((data) => {
